...
                .multilineTextAlignment(.leading)
            
            TextField(
                "Amount",
                value: $bill,
                format: .currency(code: Locale.current.currency?.identifier ?? "USD")
            ).accessibilityIdentifier("totalAmountText")
            .focused($focusState)
            .onChange(of: focusState) { _, newValue in
                isFocused = newValue
            }
            .keyboardType(.decimalPad)
            .font(.largeTitle)
...
